[tool.poetry]
name = "hands-on-machine-learning"
version = "0.1.0"
description = "Playing with book Hands on Machine Learning"
authors = ["Gustavo Nunes Martins <martins.yo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = "^2.7.0"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.10b0"
pylint = "^2.11.1"
jupyterlab = "^3.2.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
